tdf#103146 Revamp Extension Manager Dialog, Part 3
Move the "Enable"/"Disable" button which was customly
implemented from the ExtBoxWithBtns_Impl to the new row.
This should also solve some accessibility issues.

Also remove some unnecessary code pieces for clean-up.

Change-Id: Iec7820779110eea3411a774de8277ef238f562e7
Reviewed-on: https://gerrit.libreoffice.org/30973
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/desktop/uiconfig/ui/extensionmanager.ui
+++ b/desktop/uiconfig/ui/extensionmanager.ui
@@ -140,7 +140,8 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="enablebtn">
-                    <property name="label" translatable="yes">Enable</property>
+                    <property name="label" translatable="yes">_Enable</property>
+                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_underline">True</property>
