make strings localizable
Change-Id: Ic74b55b12926a23e9e98308407a88e73dc9cb0c7

--- a/sfx2/uiconfig/ui/safemodequerydialog.ui
+++ b/sfx2/uiconfig/ui/safemodequerydialog.ui
@@ -37,7 +37,7 @@
             </child>
             <child>
               <object class="GtkButton" id="restart">
-                <property name="label">_Restart</property>
+                <property name="label" translatable="yes">_Restart</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
