--- a/svx/uiconfig/ui/profileexporteddialog.ui
+++ b/svx/uiconfig/ui/profileexporteddialog.ui
@@ -37,7 +37,7 @@
             </child>
             <child>
               <object class="GtkButton" id="openfolder">
-                <property name="label">Open Containing _Folder</property>
+                <property name="label" translatable="yes">Open Containing _Folder</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
