Translatable string fixes
Change-Id: I8dd8f70dd7c522d60dbd69cea8c78773d6dc2ebf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142085
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/cui/uiconfig/ui/deepltabpage.ui
+++ b/cui/uiconfig/ui/deepltabpage.ui
@@ -76,7 +76,7 @@
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
                 <property name="margin_end">5</property>
-                <property name="label" translatable="yes" context="deepltabpage|label3">Auth Key:</property>
+                <property name="label" translatable="yes" context="deepltabpage|label3">Authentication key:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">authkey</property>
               </object>
