--- a/cui/uiconfig/ui/optaccessibilitypage.ui
+++ b/cui/uiconfig/ui/optaccessibilitypage.ui
@@ -146,7 +146,7 @@
                   <object class="GtkLabel" id="label13">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes" context="optaccessibilitypage|label13">High Contrast:</property>
+                    <property name="label" translatable="yes" context="optaccessibilitypage|label13">High contrast:</property>
                     <property name="use-underline">True</property>
                     <property name="mnemonic-widget">highcontrast</property>
                     <property name="xalign">0</property>
@@ -169,7 +169,7 @@
                     </items>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="highcontrast-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|highcontrast">Controls if high contrast mode is used. Select from "Automatic", "Disable" and "Enable". "Automatic" uses high contrast according to system settings.</property>
+                        <property name="AtkObject::accessible-description" translatable="yes" context="extended_tip|highcontrast">Controls if high contrast mode is used. Select from “Automatic”, “Disable” and “Enable”. “Automatic” uses high contrast according to system settings.</property>
                       </object>
                     </child>
                   </object>
